samples/_failures_safe/1761270689_c6b389_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a8a8060d.c: In function ‘main’:
./samples/SAFE/__tmp_a8a8060d.c:156:47: error: expected ‘)’ at end of input
  156 |     execute_operation(&g2, operations[2], 0, 0
      |                      ~                        ^
      |                                               )
./samples/SAFE/__tmp_a8a8060d.c:156:5: error: expected declaration or statement at end of input
  156 |     execute_operation(&g2, operations[2], 0, 0
      |     ^~~~~~~~~~~~~~~~~
